Fix: overall center align adopted

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,9 +77,9 @@
 
 
 html {
-    width: 100%;
+    width: 100vw;
     height: 100%;
-    max-width: 767px;
+    /* max-width: 625px; */
     margin: 0px;
     padding: 0px;
 }
@@ -87,9 +87,12 @@ html {
 
 body {
   height: 100%;
-  max-width: 767px;
   margin: 0px;
   padding: 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* 스크롤바 삭제 */
